--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,8 +14,12 @@
 	<%- body %>
 	</section>
 
-<footer class="main" id="f1">
-esto es el footer
+ <footer>
+			Correo: <a id="link" href="mailto:f.rodriguezv@alumnos.upm.es"> f.rodriguezv@alumnos.upm.es</a> 
+			<br> <a id="link" href="https://github.com/FerRguez94/quiz-proyecto"> Repositorio en Git</a> <br>
+    <script type="text/javascript">
+				document.write(new Date());
+			</script>
 </footer>
 
     </div>  
