--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,17 @@
 	<a href="/"> Inicio </a>
     	<a href="/quizes"> Preguntas </a>
 	<section class="main" id="s1">
-	<%- body %>
+
+	 <% if (errors.length) { %>
+	   <span id='ErrorMsg'>
+		Corregir errores: <br>
+		<% for (var i in errors) { %>
+			<span> <%= errors[i].message %> </span> <br>
+		<% } %>
+	   </span>
+	 <% } %>
+
+	<div> <%- body %> </div>
 	</section>
 
  <footer>
