me pide guardar

--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -1,7 +1,7 @@
 <h1 onload="carga()">
  Edite la pregunta <p>
 </h1>
-<form method="post" action="/quizes/<%= quiz.quizId %>?_method=put" >
+<form method="post" action="/quizes/<%= quiz %>?_method=put" >
 <% include _form.ejs %>
 </form>
 <script>
