--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,6 +12,14 @@
 	<a href="/"> Inicio </a>
     	<a href="/quizes"> Preguntas </a>
 	<section class="main" id="s1">
+	<% if(errors.length) {%>
+		<span id="ErrorMsg">
+		corregir errores <br/>
+		<% for (var i in errors) {%>
+			<span> <%= errors[i].message %> </span> <br/>
+		<% }%>
+		<span>
+	<% } %>
 	<%- body %>
 	</section>
 
