buscar preguntas ordenadas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -15,3 +15,9 @@
 
 </table>
 <a href="/quizes/new"><button type="button"> Crear pregunta </button> </a>
+
+<form method="get" action="quizes">
+			Buscar pregunta <p>
+	<input type="text" name="search" value="responda aqui"/>
+	<input type="submit" value="Enviar">
+</form>
