--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,9 +8,12 @@
     <div id="page-wrap">
 	<header class="main" id="h1">
 	<%if(!session.user) {%>
-		<span class="rigth"><a href="/login"> Login </a></span>
+		<span class="rigth"><a href="/login"> Login </a> <a href="/user"> Sign up </a> </span>
 	<%}else{%>
-		<span class="rigth"><%=session.user.username%> <a href="/logout">Logout</a></span>
+		<span class="rigth"><%=session.user.username%>
+			 <a href="/user/"+<%=session.user.id%>+"/edit">settings</a>
+			 <a href="/logout">Logout</a>
+		</span>
 	<%}%>
     	<h1>Quiz el juego de las preguntas </h1>
 	</header>
