autologout de sesion

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,38 +1,13 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+*                    { margin: 0; padding: 0; }
+body                 { font: 16px Georgia, serif; }
 
-a {
-  color: #00B7FF;
-}
+#page-wrap           { margin: 2% auto; color: white; }
+#page-wrap > .main   { border: 1px solid #999; padding: 1%; 
+	                   margin-bottom: 1px; color: black;}
 
-footer{
-position:fixed;
-bottom:0;
-left:0;
-right:0;
-display: block;
-padding-left:1em;
-color: #000;
-text-decoration: none;
-text-align: center;
-font-size: 0.9em;
-border-bottom-width: 1px;
-border-bottom-style: solid;
-border-bottom-color: #CCC;
-background-color: #EAEAEA;
-border-top-width: 1px;
-border-top-style: solid;
-border-top-color: #CCC;
-border-right-width: 1px;
-border-right-style: solid;
-border-right-color: #CCC;
-border-left-width: 1px;
-border-left-style: solid;
-border-left-color: #CCC;
-margin: 0px;
-margin-top: 1em;
-} 
+section > div        { padding: 20px; }
+header, nav, section { background: #eee; text-align: center;}
+footer               { background: #eee; text-align: center;}
+nav span             { margin: 0px 10px 0px 0px;}
 
-
+#ErrorMsgs           { color: #f61; font-size: smaler}
