--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,6 +13,7 @@
         href='/stylesheets/smartphone.css' />
   </head>
 <body>
+ <a href="/quizes/statistics">pagina de estadisticas</a>
     <div id="page-wrap">
 	<header class="main" id="h1">
 	<%if(!session.user) {%>
