--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,7 @@
     	<a href="/quizes"> Preguntas </a>
 	<%if(session.user) {%>
 		<span><a href="/user/<%=session.user.id%>/quizes">Mis preguntas </a></span>
+		<span><a href="/user/<%=session.user.id%>/favourites">Mis favoritos </a></span>
 	<%}%>
 	<section class="main" id="s1">
 	<% if(errors.length) {%>
