--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -11,8 +11,14 @@
 					</button>
 				</form>
 			</td>
-		<%}
-	}%>
+		<%}%>
+			<td>
+			<form method="post" action="/user/<%= session.user.id %>/favourites/<%= quizes[i].id %>?_method=put">
+					<button type="submit"> favorito </button>
+			</form>
+		</td>
+
+	<%}%>
 	</tr>
 	
 <% } %>
