--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,7 +7,7 @@
 	<input type="text" name="respuesta" value="Respuesta" />
 	<input type="submit" valuea="Enviar">
 </form>
-
+<p> <a href="/user/session.user.id/favourites/quizes[i].id"> <button>Favorito</button>  </p>
 <p> <a href="/quizes/<%= quiz.id %>/comments/new"> <button>Nuevo comentario </button> </a> </p>
 <p><strong>Comentarios:</strong></p>
 
